--- a/MagicGame/MagicGame.vcxproj.filters
+++ b/MagicGame/MagicGame.vcxproj.filters
@@ -41,5 +41,14 @@
     <ClInclude Include="include\lib\olcPixelGameEngine.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="HP-Bottle.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Grounds.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
