--- a/MagicGame/MagicGame.vcxproj
+++ b/MagicGame/MagicGame.vcxproj
@@ -22,16 +22,17 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Enemy.h" />
-    <ClInclude Include="Grounds.h" />
-    <ClInclude Include="HP-Bottle.h" />
     <ClInclude Include="include\Animation.h" />
     <ClInclude Include="include\Caracter.h" />
+    <ClInclude Include="include\Enemy.h" />
+    <ClInclude Include="include\Grounds.h" />
     <ClInclude Include="include\Gun.h" />
+    <ClInclude Include="include\HP-Bottle.h" />
     <ClInclude Include="include\Item.h" />
     <ClInclude Include="include\lib\olcPixelGameEngine.h" />
     <ClInclude Include="include\Map.h" />
     <ClInclude Include="include\Player.h" />
+    <ClInclude Include="LevelsLoader.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
