--- a/MagicGame/MagicGame.vcxproj.filters
+++ b/MagicGame/MagicGame.vcxproj.filters
@@ -50,7 +50,7 @@
     <ClInclude Include="include\Enemy.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="LevelsLoader.h">
+    <ClInclude Include="include\LevelsLoader.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
