--- a/MagicGame/MagicGame.vcxproj.filters
+++ b/MagicGame/MagicGame.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="include\LevelsLoader.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="LoadingScreen.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
